ajout du prix dans la liste de produits

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -14,5 +14,7 @@
     <p *ngIf="product.description">
       Description: {{ product.description }}
     </p>
+
+    <h4>Prix conseillé: {{ product.price | currency }}</h4>
   </div>
 </div>
